[package]
name = "multihub-swap"
version = "0.1.0"
edition = "2021"
description = "Multi-Hub Swap program for Solana blockchain"

# Must match the program ID in the entrypoint file
[package.metadata.solana]
program-id = "3cXKNjtRv8b1HVYU6vRDvmoSMHfXrWATCLFY2Y5wTsps"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"

[lib]
crate-type = ["cdylib", "lib"]